project(reactive CXX)
cmake_minimum_required(VERSION 3.0)

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_COLOR_MAKEFILE ON)
set (CMAKE_CXX_EXTENSIONS OFF)

if(NOT WIN32)
    string(ASCII 27 Esc)
    set(ColourReset "${Esc}[m")
    set(Red "${Esc}[31m")
    set(Green "${Esc}[32m")
else()
    set(ColourReset "")
    set(Red "")
    set(Green "")
endif()

if (NOT CMAKE_BUILD_TYPE)
    message(STATUS "Default build type 'Debug'")
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "" FORCE )
else()
    message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
endif()

if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    set(CMAKE_DEBUG_POSTFIX d)
    set(POCO_SUFFIX d)
endif()
option(3RD_PARTY_INSTALL_STEP "3rd party install step" OFF)
option(COMPILE_STEP "Compile step" OFF)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
if(NOT PROJECT_3RD_LOC)
    set(PROJECT_3RD_LOC ${PROJECT_SOURCE_DIR}/Third_Party)
endif()
if(NOT IS_ABSOLUTE ${PROJECT_3RD_LOC})
    get_filename_component(PROJECT_3RD_LOC ${PROJECT_3RD_LOC} ABSOLUTE BASE_DIR ${PROJECT_SOURCE_DIR})
endif()
string(FIND "${CMAKE_PREFIX_PATH}" "${PROJEC_3RD_LOC}" 3RD_LOC_PREFIX_ADDED)
if(NOT ${3RD_LOC_PREFIX_ADDED})
    list(APPEND CMAKE_PREFIX_PATH ${PROJECT_3RD_LOC})
endif()
message(STATUS "third party installation path - ${PROJECT_3RD_LOC}")

include_directories( ${PROJECT_DIR} ${PROJECT_DIR}/src ${PROJECT_3RD_LOC}/include)

find_package(Core)
find_package(Python)
find_package(SweetPy)

if(3RD_PARTY_INSTALL_STEP)
    include(installThirdParty)
endif()

if(COMPILE_STEP)
    set(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
    if(NOT OUTPUT_DIR)
        set(OUTPUT_DIR ${PROJECT_DIR}/bin)
    endif()
    if(NOT IS_ABSOLUTE ${OUTPUT_DIR})
        get_filename_component(OUTPUT_DIR ${OUTPUT_DIR} ABSOLUTE BASE_DIR ${PROJECT_SOURCE_DIR})
    endif()

    if(NOT PYTHON_OUTPUT_DIR)
        set(PYTHON_OUTPUT_DIR ${PROJECT_DIR}/reactive_py)
    endif()
    if(NOT IS_ABSOLUTE ${PYTHON_OUTPUT_DIR})
        get_filename_component(PYTHON_OUTPUT_DIR ${PYTHON_OUTPUT_DIR} ABSOLUTE BASE_DIR ${PROJECT_SOURCE_DIR})
    endif()
    message(STATUS "Output dir - ${OUTPUT_DIR}")
    message(STATUS "Python Output dir - ${PYTHON_OUTPUT_DIR}")

    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${OUTPUT_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${OUTPUT_DIR})
    set(CMAKE_BINARY_DIR ${OUTPUT_DIR})
    set(EXECUTABLE_OUTPUT_PATH ${OUTPUT_DIR})

    add_subdirectory(${PROJECT_DIR}/src)

    link_directories(${PROJECT_3RD_LOC}/lib ${OUTPUT_DIR})
    set(TO_LINK_LIBS pthread Core${CMAKE_DEBUG_POSTFIX}.so)

    add_library(reactive SHARED src/cpp/GraphEngine.cpp src/cpp/GraphNode.cpp)
    target_link_libraries(reactive ${TO_LINK_LIBS})
    add_custom_command(TARGET reactive POST_BUILD
            COMMAND cmake -E copy_directory ${PROJECT_DIR}/src/python ${PYTHON_OUTPUT_DIR})
endif()

if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic -Wno-sign-compare -Wno-unused-variable")
endif()

